base/productivity/searxng/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: productivity
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: searxng
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
